# 2D-to-3D-app

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: database.py  main.py
static/: index.html
